<resources>
    <string name="app_name">Phunware Product Homework</string>

    <!-- detail -->
    <string name="detail_title">%1$s (%2$s)</string>
    <string name="detail_loading">Loading</string>
    <string name="detail_current_temp">Current temp:</string>
    <string name="detail_high_temp">High temp:</string>
    <string name="detail_sunrise">Sunrise:</string>
    <string name="detail_sunset">Sunset:</string>

    <!-- add -->
    <string name="add_zip_code">Add Zip Code</string>

    <!-- list -->
    <string name="menu_search">Search</string>
</resources>
