<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/frameLayout"
                                                   xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:padding="8dp"
                                                   tools:context=".features.detail.fragment.DetailFragment">

    <TextView
        android:id="@+id/zipCodeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        tools:text="San Diego (92029)"/>

    <TextView
        android:id="@+id/currentTempLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_current_temp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@+id/zipCodeTextView"/>

    <TextView
        android:id="@+id/currentTempTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@+id/currentTempLabel"
        app:layout_constraintTop_toBottomOf="@+id/zipCodeTextView"
        tools:text="90 F"/>

    <TextView
        android:id="@+id/highTempLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_high_temp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@+id/currentTempLabel"/>

    <TextView
        android:id="@+id/highTempTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@+id/highTempLabel"
        app:layout_constraintTop_toBottomOf="@+id/currentTempLabel"
        tools:text="63 F"/>

    <TextView
        android:id="@+id/sunriseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_sunrise"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@+id/highTempLabel"/>

    <TextView
        android:id="@+id/sunriseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@+id/sunriseLabel"
        app:layout_constraintTop_toBottomOf="@+id/highTempLabel"
        tools:text="9:00am"/>

    <TextView
        android:id="@+id/sunsetLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_sunset"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@+id/sunriseTextView"/>

    <TextView
        android:id="@+id/sunsetTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@+id/sunsetLabel"
        app:layout_constraintTop_toBottomOf="@+id/sunriseTextView"
        tools:text="9:00pm"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/loadingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_loading"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/loadingGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="loadingTextView,progressBar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/weatherGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="highTempTextView,highTempLabel,sunriseTextView,currentTempTextView,currentTempLabel,zipCodeTextView,sunriseLabel,sunsetTextView,sunsetLabel"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>